remove null tag prefix & material entry