@@ -37,6 +37,7 @@ import java.util.stream.Collectors;
 
 import static com.gregtechceu.gtceu.api.GTValues.M;
 import static com.gregtechceu.gtceu.api.data.chemical.material.ItemMaterialData.*;
+import static com.gregtechceu.gtceu.common.data.GTMaterialItems.ITEMS_WITHOUT_MATERIAL;
 
 public class ChemicalHelper {
 
@@ -52,7 +53,7 @@ public class ChemicalHelper {
         } else if (object instanceof MaterialEntry entry) {
             var items = getItems(entry);
             if (!items.isEmpty()) {
-                return ItemMaterialData.getMaterialInfo(items.get(0));
+                return ItemMaterialData.getMaterialInfo(items.getFirst());
             }
         } else if (object instanceof Ingredient ing) {
             if (!ing.isCustom()) {
@@ -87,7 +88,7 @@ public class ChemicalHelper {
 
     public static MaterialStack getMaterialStack(ItemLike itemLike) {
         var entry = getMaterialEntry(itemLike);
-        if (!entry.isEmpty()) {
+        if (entry != null) {
             Material entryMaterial = entry.material();
             return new MaterialStack(entryMaterial, entry.tagPrefix().getMaterialAmount(entryMaterial));
         }
@@ -121,10 +122,14 @@ public class ChemicalHelper {
         return FLUID_MATERIAL.getOrDefault(fluid, GTMaterials.NULL);
     }
 
-    public static TagPrefix getPrefix(ItemLike itemLike) {
+    public static @Nullable TagPrefix getPrefix(ItemLike itemLike) {
         MaterialEntry entry = getMaterialEntry(itemLike);
-        if (!entry.isEmpty()) return entry.tagPrefix();
-        return TagPrefix.NULL_PREFIX;
+        if (entry != null) return entry.tagPrefix();
+        return null;
+    }
+
+    public static TagPrefix getPrefixOrThrow(ItemLike itemLike) {
+        return Objects.requireNonNull(getPrefix(itemLike), "No tag prefix present for %s".formatted(itemLike.asItem()));
     }
 
     public static TagPrefix getPrefix(ItemStack itemStack) {
@@ -184,7 +189,7 @@ public class ChemicalHelper {
         return getDust(materialStack);
     }
 
-    public static MaterialEntry getMaterialEntry(ItemLike itemLike) {
+    public static @Nullable MaterialEntry getMaterialEntry(ItemLike itemLike) {
         // asItem is a bit slow, avoid calling it multiple times
         var itemKey = itemLike.asItem();
         var materialEntry = ITEM_MATERIAL_ENTRY_COLLECTED.get(itemKey);
@@ -197,23 +202,30 @@ public class ChemicalHelper {
             }
             ITEM_MATERIAL_ENTRY.clear();
 
+            if (ITEMS_WITHOUT_MATERIAL.contains(itemKey)) return null;
+
             // guess an entry based on the item's tags if none are pre-registered.
             materialEntry = ITEM_MATERIAL_ENTRY_COLLECTED.computeIfAbsent(itemKey, item -> {
                 for (TagKey<Item> itemTag : item.asItem().builtInRegistryHolder().tags().toList()) {
                     MaterialEntry materialEntry1 = getMaterialEntry(itemTag);
-                    // check that it's not the empty marker and that it's not a parent tag
-                    if (!materialEntry1.isEmpty() &&
+                    // check that it's null and that it's not a parent tag
+                    if (materialEntry1 != null &&
                             materialEntry1.tagPrefix().getItemParentTags().stream().noneMatch(itemTag::equals)) {
                         return materialEntry1;
                     }
                 }
-                return MaterialEntry.NULL_ENTRY;
+                ITEMS_WITHOUT_MATERIAL.add(item);
+                return null;
             });
         }
         return materialEntry;
     }
 
-    public static MaterialEntry getMaterialEntry(TagKey<Item> tag) {
+    public static MaterialEntry getMaterialEntryOrThrow(ItemLike itemLike) {
+        return Objects.requireNonNull(getMaterialEntry(itemLike), "No material entry for %s".formatted(itemLike.asItem()));
+    }
+
+    public static @Nullable MaterialEntry getMaterialEntry(TagKey<Item> tag) {
         if (TAG_MATERIAL_ENTRY.isEmpty()) {
             // If the map is empty, resolve all possible tags to their values in an attempt to save time on later
             // lookups.
@@ -230,7 +242,7 @@ public class ChemicalHelper {
                 }
             }
         }
-        return TAG_MATERIAL_ENTRY.getOrDefault(tag, MaterialEntry.NULL_ENTRY);
+        return TAG_MATERIAL_ENTRY.getOrDefault(tag, null);
     }
 
     public static List<ItemLike> getItems(MaterialEntry materialEntry) {
@@ -277,7 +289,6 @@ public class ChemicalHelper {
     }
 
     public static List<Block> getBlocks(MaterialEntry materialEntry) {
-        if (materialEntry.isEmpty()) return Collections.emptyList();
         return MATERIAL_ENTRY_BLOCK_MAP.computeIfAbsent(materialEntry, entry -> {
             TagPrefix prefix = entry.tagPrefix();
             var blocks = new ArrayList<Supplier<? extends Block>>();
@@ -324,6 +335,10 @@ public class ChemicalHelper {
             return tags.getFirst();
         }
         return null;
+    }
+
+    public static TagKey<Item> getTagOrThrow(TagPrefix orePrefix, Material material) {
+        return Objects.requireNonNull(getTag(orePrefix, material), "No item tag for %s %s".formatted(orePrefix, material));
     }
 
     public static List<TagKey<Item>> getTags(TagPrefix orePrefix, @NotNull Material material) {
